just wanted to add a footer

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
                     <p class="bella-p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, distinctio ipsam. Perspiciatis voluptate dolorum rem nulla, ut consequuntur unde voluptatum iusto doloribus amet minima blanditiis veniam sapiente, ratione aut praesentium?
             </p>
     </div>
-    <!-- <div>
+    <div>
         <footer class="footer">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sunt excepturi provident dignissimos. Doloribus facilis pariatur deserunt laborum modi enim odit, corporis sit aspernatur consectetur nemo laboriosam velit eveniet voluptatum.
+            <p>
+                Website created by Monica &#169; 2022
             </p>
         </footer>  
-    </div> -->
+    </div>
 </body>
 </html>
